# catanValueFunction

./: .gitignore  LICENSE  README.md  collect.py  data_collection.py  features.py  flatten.py  main.py  pyproject.toml  schema.py  test_simulation.py  train_gbt.py  train_logreg.py
data/: feature_ordering.json
results/gbt/: importance_unified.csv  importance_vp_02-04.csv  importance_vp_04-06.csv  importance_vp_06-08.csv  importance_vp_08-10.csv  importance_vp_10-12.csv  importance_vp_12-15.csv  importance_vp_15-15.csv
results/lr/: coef_unified.csv  coef_vp_02-04.csv  coef_vp_04-06.csv  coef_vp_06-08.csv  coef_vp_08-10.csv  coef_vp_10-12.csv  coef_vp_12-15.csv  coef_vp_15-15.csv  metrics.json  pipeline_unified.joblib  pipeline_vp_02-04.joblib  pipeline_vp_04-06.joblib  pipeline_vp_06-08.joblib  pipeline_vp_08-10.joblib  pipeline_vp_10-12.joblib  pipeline_vp_12-15.joblib  pipeline_vp_15-15.joblib
