[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "catanvaluefunction"
version = "0.1.0"
description = "CS229 Catan value function"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # catanatron pinned to upstream main SHA (PyPI 3.2.1 lacks AlphaBetaPlayer).
    # See .planning/phases/00-lock-smoke/00-RESEARCH.md "AlphaBetaPlayer pin trap".
    "catanatron @ git+https://github.com/bcollazo/catanatron.git@41ba0db5bc9d95b13a32e1ed7710094382a3b87a",
    # catanatron-gym 3.2.1 fails to install on Python 3.13 (gym 0.21.0 setup.py).
    # 4.0.0 uses gymnasium; the features API is unchanged.
    "catanatron-gym>=4.0.0",
    "scikit-learn>=1.8",
    "xgboost>=3.2",
    "pyarrow>=24",
    "pandas>=2.2",
    "scipy>=1.17",
    "matplotlib>=3.10",
    "typer",
    "tqdm",
    "pyyaml",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
only-include = ["features.py", "schema.py"]

